<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="result">results</string>
    <string name="tag">myTag</string>
    <string name="desc_movie_poster">Movie poster</string>
    <string name="release_date_label">Release:    %s</string>
    <string name="vote_label">Vote:</string>
    <string name="genre_label">Genre: %s</string>
    <string name="extra_key">details</string>
    <string name="detail_error_message">Something Went Wrong</string>
    <string name="key_release_date">release_date</string>
    <string name="key_poster_path">poster_path</string>
    <string name="key_vote_average">vote_average</string>
    <string name="key_overview">overview</string>
    <string name="key_backdrop_path">backdrop_path</string>
    <string name="year_pattern">yyyy</string>
    <string name="fallback">N/A</string>
    <string name="key_title">title</string>
    <string name="info">Info</string>
    <string name="favourite">Favourite</string>
    <string name="share">share</string>
    <string name="sample_text">lorem ipsum</string>
    <string name="sorting">sorting</string>
    <string name="label_popular">Popular</string>
    <string name="label_top_rated">Top-Rated</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_trailer">Trailers</string>
    <string name="label_review">Reviews</string>

    <string-array name="spinner_list">
        <item>Popular</item>
        <item>Top-rated</item>
        <item>Favourites</item>
    </string-array>

</resources>
