<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <TextView
        android:id="@+id/sort_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/label_popular"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sort_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/label_top_rated"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sort_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/label_favourite"
        android:textSize="16sp" />
</LinearLayout>