<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_poster_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_movie_poster"
            android:src="@drawable/sample"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blur" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_label"
                style="@style/secondaryDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_label"
                style="@style/secondaryDetails"
                android:layout_marginLeft="50dp"
                app:layout_constraintLeft_toRightOf="@id/genre_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="50dp" />
            <TextView
                android:id="@+id/release_date"
                style="@style/secondaryDetails"
                android:layout_marginTop="4dp"
                android:text="@string/release_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres"/>

            <TextView
                android:id="@+id/vote_label"
                android:layout_marginTop="4dp"
                android:text="@string/vote_label"
                style="@style/secondaryDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release_date"/>

            <TextView
                android:id="@+id/average_vote"
                android:layout_marginTop="4dp"
                android:text="@string/vote_label"
                style="@style/secondaryDetails"
                android:layout_marginLeft="50dp"
                app:layout_constraintLeft_toRightOf="@id/vote_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release_date"
                android:layout_marginStart="50dp" />

            <TextView
                android:id="@+id/overview"
                android:textSize="16sp"
                android:textColor="@color/primaryTextColor"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/average_vote"/>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</android.support.v4.widget.NestedScrollView>